--- a/github.com/sidharthvijayakumar/MavenProject.git/War/.settings/org.eclipse.wst.common.component
+++ b/github.com/sidharthvijayakumar/MavenProject.git/War/.settings/org.eclipse.wst.common.component
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="War">
+    <wb-module deploy-name="War-0.0.1-SNAPSHOT">
         <wb-resource deploy-path="/WEB-INF/web.xml" source-path="/WebContent/WEB-INF/web.xml"/>
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
